# raha-realty

./: Cargo.toml  README.md  devbox.json  index.css  index.html  index.js  main.html  main.js
configuration/: base.yaml
design/: GatewayExample.puml  README.md  SENTINEL.md
gateway/: Cargo.toml
gateway/src/: lib.rs  main.rs  startup.rs
gateway/src/auth/: auth.rs
gateway/src/config/: config.rs
gateway/src/proxy/: proxy.rs
gateway/src/routes/: routes.rs
gateway/tests/: gateway.rs  integration.rs
sentinel/: Dockerfile  docker-compose.yaml
sentinel/booking-service/: .env  Cargo.toml  bookings.sql
sentinel/booking-service/src/: main.rs  models.rs
sentinel/property-service/: .env  .gitignore  CHANGELOG.md  Cargo.toml
sentinel/property-service/src/: db.rs  handlers.rs  kafka.rs  lib.rs  main.rs  models.rs
sentinel/property-service/tests/: property_service_test.rs
sentinel/property-service/tests/common/: mod.rs
services/auth/: Cargo.toml
