[workspace]
members = [
    "gateway",
    "services/auth",
]
resolver = "2"

[workspace.dependencies]
actix-web = "4.10.2"
reqwest = { version = "0.12.20", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.11.8"
log = "0.4.27"
tokio = { version = "1.44.1", features = ["full"] }
rand = "0.9.1"