[package]
name = "gateway"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "gateway"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
actix-service = "2.0.3"
actix-web.workspace = true
reqwest.workspace = true
serde_json.workspace = true
env_logger.workspace = true
tokio.workspace = true
log.workspace = true
rand.workspace = true
futures = "0.3.31"
url = "2.5.4"
uuid = {version = "1.17.0", features = ["v4"]}