[package]
name = "booking-service"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = {version = "1.0.217", features = ["derive"]}
serde_json = "1.0.138"
uuid = {version = "1.12.1", features = ["v4"]}
dotenv = "0.15.0"
sqlx = {version = "0.8", features = ["runtime-async-std-native-tls", "postgres"]}
reqwest = "0.12.12"
tokio = {version = "1.43.0", features = ["full"]}