[package]
name = "property-service"
version = "0.2.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = {version = "1.0.217", features = ["derive"]}
serde_json = "1.0.137"
uuid = {version = "1.12.1", features = ["v4", "serde"]}
dotenv = "0.15.0"
bigdecimal = {version = "0.4.7", features = ["serde"]}
sqlx = {version = "0.8.3", features = ["runtime-async-std-native-tls", "postgres", "uuid", "bigdecimal"]}